--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@studiokloek/capacitor-plugin-audiosession",
-  "version": "6.0.0",
+  "name": "@capgo/capacitor-plugin-audio-session",
+  "version": "7.0.0",
   "description": "This capacitor plugin allows iOS applications to get notified audio about interrupts & route changes (for example when a headset is connected), and also query and override the audio device in use.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -8,26 +8,30 @@
   "unpkg": "dist/plugin.js",
   "files": [
     "dist/",
-    "ios/Plugin/",
-    "StudiokloekCapacitorPluginAudiosession.podspec"
+    "ios/Sources",
+    "ios/Tests",
+    "Package.swift",
+    "CapgoCapacitorPluginAudioSession.podspec"
   ],
-  "author": "Martijn Swart <opensource@studiokloek.nl>",
+  "author": "Martin Donadieu <martin@capgo.app>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/studiokloek/capacitor-plugin-audiosession.git"
+    "url": "git+https://github.com/cap-go/capacitor-plugin-audio-session.git"
   },
   "bugs": {
-    "url": "https://github.com/studiokloek/capacitor-plugin-audiosession/issues"
+    "url": "https://github.com/cap-go/capacitor-plugin-audio-session/issues"
   },
   "keywords": [
     "capacitor",
     "plugin",
-    "native"
+    "native",
+    "audio",
+    "audio-session"
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:web",
-    "verify:ios": "cd ios && pod install && xcodebuild -workspace Plugin.xcworkspace -scheme Plugin -destination generic/platform=iOS && cd ..",
+    "verify:ios": "xcodebuild -scheme CapgoCapacitorPluginAudioSession -destination generic/platform=iOS",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
@@ -35,27 +39,28 @@
     "prettier": "prettier \"**/*.{css,html,ts,js}\"",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api AudioSessionPlugin --output-readme README.md --output-json dist/docs.json",
-    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
+    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/docgen": "^0.2.1",
-    "@capacitor/ios": "^6.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/docgen": "^0.3.0",
+    "@capacitor/ios": "^7.0.0",
     "@ionic/eslint-config": "^0.4.0",
-    "@ionic/prettier-config": "^1.0.1",
-    "@ionic/swiftlint-config": "^1.1.2",
+    "@ionic/prettier-config": "^4.0.0",
+    "@ionic/swiftlint-config": "^2.0.0",
     "eslint": "^8.57.0",
-    "prettier": "~2.8.4",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
-    "swiftlint": "^1.0.1",
-    "typescript": "~4.1.5"
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.30.1",
+    "swiftlint": "^2.0.0",
+    "typescript": "~4.1.5",
+    "prettier-plugin-java": "^2.6.6"
   },
   "peerDependencies": {
-    "@capacitor/core": "^6.0.0"
+    "@capacitor/core": ">=7.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
