--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
   "files": [
+    "android/src/main/",
+    "android/build.gradle",
     "dist/",
     "ios/Sources",
     "ios/Tests",
@@ -32,6 +34,7 @@
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:web",
     "verify:ios": "xcodebuild -scheme CapgoCapacitorPluginAudioSession -destination generic/platform=iOS",
+    "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
@@ -48,6 +51,7 @@
     "@capacitor/core": "^7.0.0",
     "@capacitor/docgen": "^0.3.0",
     "@capacitor/ios": "^7.0.0",
+    "@capacitor/android": "^7.0.0",
     "@ionic/eslint-config": "^0.4.0",
     "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^2.0.0",
